# business-os

./: .gitignore  CLAUDE.md  LICENSE  README.md  doctor.ps1  pyproject.toml  setup.ps1
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: カスタマイズ.md  システム棚卸し.md  ドキュメント棚卸し.md  保存.md  履歴.md  巻き戻し.md  業務棚卸し.md
core/: rules.md
core/meta/: スラッシュコマンドの作り方.md  タスク分解と保存ルール.md  指示書の書き方.md
core/schemas/: 共通メタ.yaml
core/scripts/: excel_reader.py  pdf_extractor.py  tree_walker.py
docs/: 5分で試す.md  しくみ.md  インストール.md  困ったとき.md
inputs/: .gitkeep
outputs/: .gitkeep
outputs/システム棚卸し/: 20260101_受発注管理システム_棚卸し.yaml
outputs/業務棚卸し/: 20260101_受発注業務_棚卸し.yaml
usecases/システム棚卸し/: definition.md  template.yaml
usecases/ドキュメント棚卸し/: definition.md  template.yaml
usecases/業務棚卸し/: definition.md  template.yaml
