[project]
name = "business-os"
version = "0.1.0"
description = "日本のDX担当者向け業務改善 Claude Code スターター"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "chardet>=5.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3",
]

[tool.uv]
package = false
